crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@port_connection_list_without_close_paren.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/port_connection_list_without_close_paren.v
---
lex: Code
prefix: ""
replacement: 46..46
in_decl_name: false
expectations:
  PortConnection
  Keyword(ModuleMember)
