crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@preproc_directive_after_backtick_trigger.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/preproc_directive_after_backtick_trigger.v
---
lex: Code
prefix: ""
replacement: 19..22
in_decl_name: false
expectations:
  DirectiveName
