crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@preproc_directive_at_boundary.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/preproc_directive_at_boundary.v
---
lex: PreprocDirective
prefix: ""
replacement: 11..11
in_decl_name: false
expectations:
  <none>
