crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@preproc_directive_body.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/preproc_directive_body.v
---
lex: PreprocDirective
prefix: ""
replacement: 8..8
expectations:
  <none>
