crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@preproc_directive_keyword_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/preproc_directive_keyword_prefix.v
---
lex: Code
prefix: "de"
replacement: 1..7
in_decl_name: false
expectations:
  DirectiveName
