crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@procedural_statement_keyword_prefix_after_statement.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/procedural_statement_keyword_prefix_after_statement.v
---
lex: Code
prefix: "re"
replacement: 35..37
in_decl_name: false
expectations:
  Keyword(Statement)
