crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@specify_item_keyword_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/specify_item_keyword_prefix.v
---
lex: Code
prefix: ""
replacement: 22..22
in_decl_name: false
expectations:
  Keyword(SpecifyItem)
