crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@system_identifier_dollar_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/system_identifier_dollar_prefix.v
---
lex: Code
prefix: "$"
replacement: 24..25
in_decl_name: false
expectations:
  Keyword(BlockItem)
  Expression
